--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,10 @@
 cmake_minimum_required(VERSION 3.20.4)
 
 set(ZEPHYR_EXTRA_MODULES ${CMAKE_CURRENT_LIST_DIR}/drivers/kx134 ${CMAKE_CURRENT_LIST_DIR}/drivers/bm1422)
-#set(PM_STATIC_YML_FILE ${CMAKE_CURRENT_SOURCE_DIR}/boards/pm_static_${BOARD}.yml)
 set(CONF_FILE ${CMAKE_CURRENT_LIST_DIR}/prj.conf)
 list(APPEND CONF_FILE ${CMAKE_CURRENT_LIST_DIR}/kx134.conf)
 list(APPEND CONF_FILE ${CMAKE_CURRENT_LIST_DIR}/bm1422.conf)
-set(DTC_OVERLAY_FILE ${CMAKE_CURRENT_LIST_DIR}/boards/datadisc_nrf5340_cpuapp.overlay)
+#set(DTC_OVERLAY_FILE ${CMAKE_CURRENT_LIST_DIR}/boards/datadisc_nrf5340_cpuapp.overlay)
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(datadisc)
