--- a/prj.conf
+++ b/prj.conf
@@ -18,12 +18,12 @@ CONFIG_HEAP_MEM_POOL_SIZE=2048
 
 # Bluetooth
 CONFIG_BT=y
-#CONFIG_BT_SMP=y
+CONFIG_BT_SMP=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="DataDisc v2"
-#CONFIG_BT_DEVICE_APPEARANCE=1345
-#CONFIG_BT_MAX_CONN=2
-#CONFIG_BT_MAX_PAIRED=2
+CONFIG_BT_DEVICE_APPEARANCE=1345
+CONFIG_BT_MAX_CONN=2
+CONFIG_BT_MAX_PAIRED=2
 CONFIG_BT_BAS=y
 #CONFIG_BT_NUS=y
 
@@ -40,7 +40,7 @@ CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
 CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
-CONFIG_DISK_ACCESS=y
+
 CONFIG_DISK_DRIVER_FLASH=y
 CONFIG_DISK_FLASH_DEV_NAME="MX25U32"
 CONFIG_DISK_VOLUME_SIZE=0x4000000
